--- a/wercker.yml
+++ b/wercker.yml
@@ -4,6 +4,10 @@ build:
         - arjen/hugo-build:
             version: "0.14"
             theme: gindoro
+        - script:
+            name: install git
+            code: |
+                sudo yum install git
 deploy:
     steps:
         - lukevivier/gh-pages@0.2.1:
