--- a/wercker.yml
+++ b/wercker.yml
@@ -1,6 +1,11 @@
 box: ubuntu:latest
 build:
     steps:
+        - script:
+            name: install theme
+            code: |
+                git submodule init
+                git submodule update
         - arjen/hugo-build:
             version: "0.14"
             theme: gindoro
