--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/gindoro"]
 	path = themes/gindoro
-	url = git@github.com:cdipaolo/gindoro.git
+	url = https://github.com/cdipaolo/gindoro.git 
