--- a/wercker.yml
+++ b/wercker.yml
@@ -1,6 +1,10 @@
 box: ubuntu:latest
 build:
     steps:
+        - script:
+            name: apt-get update
+            code: |
+                apt-get update
         - install-packages:
             packages: git
         - script:
